fix IE/Edge collapse bug
needed to revert li's back to divs to avoid user-containers jumping
during collapse

--- a/assets/index.scss
+++ b/assets/index.scss
@@ -17,10 +17,6 @@ body {
   background-color: $bg-purple;
 }
 
-ul {
-  margin: 0;
-}
-
 a {
   outline: none;
   text-decoration: none;
